Refine content and CSS

--- a/views/careers.html
+++ b/views/careers.html
@@ -16,7 +16,8 @@
         <!--==================
          NAV SECTION
         ==================-->
-        <nav class="w-screen flex justify-between relative z-10 border-b sm:p-4 lg:p-4">
+
+        <nav class="w-screen flex justify-between relative z-10 border-b sm:p-4 lg:p-6">
           <a href="./index.html">
             <img class="max-w-xs h-16 sm:w-40 sm:h-auto sm:my-3" src="../public/assets/figma-imgs/vinci-logo.png" alt="vinci logo">
           </a>
@@ -44,6 +45,35 @@
             </a>
           </ul>
         </nav>
+        
+        <!-- <nav class="w-screen flex justify-between relative z-10 border-b sm:p-4 lg:p-4">
+          <a href="./index.html">
+            <img class="max-w-xs h-16 sm:w-40 sm:h-auto sm:my-3" src="../public/assets/figma-imgs/vinci-logo.png" alt="vinci logo">
+          </a>
+          <div class="px-4 cursor-pointer mx-5 my-3 md:hidden">
+            <svg class="w-12" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor"><path d="M4 6h16M4 12h16M4 18h16"></path></svg>
+          </div>
+          <ul class="flex justify-between sm:hidden md:flex md:text-sm lg:text-xl lg:mx-32">
+            <a href="./about.html">
+              <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">About</li>
+            </a>
+            <a href="./products.html">
+              <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Solutions</li>
+            </a>
+            <a href="./partners.html">
+              <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Partners</li>
+            </a>
+            <a href="./blog.html">
+              <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Blog</li>
+            </a>
+            <a href="./careers.html">
+              <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Careers</li>
+            </a>
+            <a href="./contact.html">
+              <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Contact</li>
+            </a>
+          </ul>
+        </nav> -->
 
         <!--===================
          HERO SECTION CONTENTS
@@ -122,12 +152,12 @@
           <section class="contents contact mt-20 p-8">
             <h1 class="text-4xl font-black mb-20">Want to Learn More About VR Training?</h1>
             <a href=./blogs.html"">
-              <span class=" border p-2 bg-primary text-secondary text-2xl">Head over to Our Blogs to Learn more ></span>
+              <span class=" border p-2 bg-secondary text-primary text-2xl hover:bg-gray-100 hover:opacity-3 hover:text-gray-600 sm:text-l lg:text-xl">Head over to Our Blogs to Learn more ></span>
             </a>
             <br>
             <br>
             <a href="./contact.html">
-              <span class="border bg-primary text-secondary text-2xl">Or Reach Out to Us ></span>
+              <span class="border p-2 bg-secondary text-primary text-2xl hover:bg-gray-100 hover:opacity-3 hover:text-gray-600 sm:text-l lg:text-xl">Or Reach Out to Us ></span>
             </a>
             <section class="flex">
               <footer class="footer">
