--- a/views/index.html
+++ b/views/index.html
@@ -19,7 +19,7 @@
           ==================-->
 
           <nav class="w-screen flex justify-between relative z-10 border-b sm:p-4 lg:p-6">
-            <a href="#">
+            <a href="./index.html">
               <img class="max-w-xs h-16 sm:w-40 sm:h-auto sm:my-3" src="../public/assets/figma-imgs/vinci-logo.png" alt="vinci logo">
             </a>
             <div class="px-4 cursor-pointer mx-5 my-3 md:hidden">
@@ -66,7 +66,7 @@
              </p>
            <h3 class="pt-12 sm:text-2xl sm:my-8  lg:text-3xl">Create, Analyze, and Train in <b class="bold">Virtual Reality</b></h3>
     ​
-           <a id="learnMoreIntro" class="btn uppercase border p-4 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600 sm:text-l lg:text-xl" href="/services">Learn about our services</a>
+           <a id="learnMoreIntro" class="btn uppercase border p-4 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600 sm:text-l lg:text-xl" href="./products.html">Learn about our services</a>
     ​
     ​       <p class="down-arrow sm:text-6xl my-32">⌄</p>
           </section>
@@ -86,7 +86,7 @@
               <p class="big w-1/2 text-xl text-gray-300 p-2 sm:text-center sm:w-11/12 sm:mb-12 lg:w-full lg:text-left lg:mb-32"> Effective training requires expensive equipment, generates potential safety hazards, and elongates training time. With Codex, teams can now improve their training by creating, training in and analyzing immersive VR simulations.
               </p>
 
-              <a id="learnMore" class="btn uppercase border p-4 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600 sm:text-l sm:ml-2 lg:text-xl lg:-ml-0 sm:block" style="width: 67%;" href="/services">
+              <a id="learnMore" class="btn uppercase border p-4 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600 sm:text-l sm:ml-2 lg:text-xl lg:-ml-0 sm:block" style="width: 67%;" href="./products.html">
                 <p class="text-center">LEARN MORE ABOUT CODEX</p>
               </a>
             </section>
@@ -145,7 +145,7 @@
                     <img class="lg:h-48 md:h-48 sm:h-40 w-full object-contain object-center p-4" src="../public/assets/figma-imgs/turbine.png" alt="blog">
                     <div class="p-6">
                       <h1 class="tracking-widest text-2xl title-font font-medium text-primary mb-1 uppercase">Personalize Training</h1>
-                      <a class="text-xl text-primary" href="./partners.html">click here</a>
+                      <a class="text-xl text-primary hover:bg-gray-100 hover:opacity-3 hover:text-gray-600" href="./partners.html">click here</a>
                     </div>
                   </div>
                 </div>
@@ -156,7 +156,7 @@
                     <div class="p-6">
                       <h1 class="tracking-widest text-2xl title-font font-medium text-primary mb-1 uppercase">Built for VR</h1>
                       <p class="text-primary text-lg">VR is cheaper, safer, yet as realistic as real equipment.</p>
-                      <a class="object-center text-xl text-primary" href="./partners.html">See why Codex is better ></a>
+                      <a class="object-center text-xl text-primary hover:bg-gray-100 hover:opacity-3 hover:text-gray-600" href="./partners.html">See why Codex is better ></a>
                     </div>
                   </div>
                 </div>
@@ -165,7 +165,7 @@
                     <img class="lg:h-48 md:h-48 sm:h-40 w-full object-contain object-center p-4" src="../public/assets/figma-imgs/soldier.png" alt="blog">
                     <div class="p-6">
                       <h1 class="tracking-widest text-2xl title-font font-medium text-primary mb-1 uppercase">Scalable & Relavent</h1>
-                      <a class="text-xl text-primary" href="./partners.html">click here</a>
+                      <a class="text-xl text-primary hover:bg-gray-100 hover:opacity-3 hover:text-gray-600" href="./partners.html">click here</a>
                     </div>
                   </div>
                 </div>
@@ -251,7 +251,7 @@
                     <img class="lg:h-48 md:h-48 sm:h-40 w-full object-contain object-center p-4" src="../public/assets/figma-imgs/turbine.png" alt="blog">
                     <div class="p-6">
                       <h1 class="tracking-widest text-2xl title-font font-medium text-primary mb-1 uppercase">Wind Turbines</h1>
-                      <a class="text-xl text-primary" href="./partners.html">click here</a>
+                      <a class="text-xl text-primary hover:bg-gray-100 hover:opacity-3 hover:text-gray-600" href="./partners.html">click here</a>
                     </div>
                   </div>
                 </div>
@@ -262,7 +262,7 @@
                     <div class="p-6">
                       <h1 class="tracking-widest text-2xl title-font font-medium text-primary mb-1 uppercase">Air Craft Maintenance</h1>
                       <p class="text-primary text-lg">VR is cheaper, safer, yet as realistic as real equipment.</p>
-                      <a class="text-xl text-primary" href="./partners.html">See why Codex is better ></a>
+                      <a class="text-xl text-primary hover:bg-gray-100 hover:opacity-3 hover:text-gray-600" href="./partners.html">See why Codex is better ></a>
                     </div>
                   </div>
                 </div>
@@ -271,7 +271,7 @@
                     <img class="lg:h-48 md:h-48 sm:h-40 w-full object-contain object-center p-4" src="../public/assets/figma-imgs/soldier.png" alt="blog">
                     <div class="p-6">
                       <h1 class="tracking-widest text-2xl title-font font-medium text-primary mb-1 uppercase">Soldier Training</h1>
-                      <a class="text-xl text-primary" href="./partners.html">click here</a>
+                      <a class="text-xl text-primary hover:bg-gray-100 hover:opacity-3 hover:text-gray-600" href="./partners.html">click here</a>
                     </div>
                   </div>
                 </div>
@@ -307,7 +307,7 @@
             <br>
             <br>
             <a href="./contact.html">
-              <span class="my-64 p-2 border bg-secondary text-primary text-2xl hover:bg-gray-100 hover:opacity-3 hover:text-gray-600 sm:text-l">Or Reach Out to Us ></span>
+              <span class="my-64 p-2 border bg-secondary text-primary text-2xl hover:bg-gray-100 hover:opacity-3 hover:text-gray-600 sm:text-l lg:text-xl">Or Reach Out to Us ></span>
             </a>
           </section>
           <footer class="footer">
@@ -347,10 +347,18 @@
 
     <!-- SCRIPTS -->
 
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
       let card = document.querySelectorAll("card");
 
       console.log(card);
+
+      for(let i=0; i<card.length; i++) {
+        if(card[i].active = true) {
+          alert("yes");
+        }else{
+          alert("no bueno");
+        }
+      }
 
       // card.addEventListener("click", () => {
       //   alert("dog");
@@ -359,7 +367,7 @@
       //   card.style.backgroundColor = "#6C6C6C";
       //   card.style.filter = "drop-shadow(0 0 0.75rem #827D7D)";
       // })
-    </script>
+    </script> -->
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/ScrollTrigger.min.js"></script>
