--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,88 +1,3 @@
-
-
-#car-container {
-  width: 700px;
-  height: 395px;
-  border: 5px solid;
-  border-radius: 5px;
-  position: relative;
-  margin: 20px auto;
-  background: rgba(80, 80, 80, .5);
-}
-
-/* change 2: hide the radio button */
-#car-container input{
-  display: none;
-}
-
-.images {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-}
-
-.images img {
-  width: 100%;
-  height: 100%;
-}
-
-.prev, .next {
-  height: 100%;
-  width: 12%;
-  background: rgba(10, 10, 10, .3);
-  position: absolute;
-  top: 0;
-  cursor: pointer;
-  transition: .15s;
-  z-index: 100;
-}
-
-.prev:hover, .next:hover {
-  background: rgba(10, 10, 10, .5);
-}
-
-.prev { left:  0 }
-.next { right: 0 }
-
-
-#car-nav {
-  width: 100%;
-  height: 35px;
-  position: absolute;
-  bottom: 0px;
-  text-align: center;
-  cursor: arrow;
-  z-index: 100;
-}
-
-.dots {
-  width: 20px;
-  height: 20px;
-  margin: 0 3px;
-  border-radius: 50%;
-  background: rgba(10, 10, 10, .7);
-  position: relative;
-  display: inline-block;
-  cursor: pointer;
-}
-
-.dots:hover {
-  background: rgba(245, 245, 245, .7);
-}
-
-#one, #two, #three {
-  z-index: -1;
-}
-
-#inp1:checked ~ #one,
-#inp2:checked ~ #two,
-#inp3:checked ~ #three {
-  z-index: 10;
-}
-
-/* change 3: add parent class/id of #dot1.... */
-#inp1:checked ~ #car-nav #dot1,
-#inp2:checked ~ #car-nav #dot2,
-#inp3:checked ~ #car-nav #dot3 {
-  background: white;
+footer ul a li {
+  width: 10%;
 }
