--- a/views/about.html
+++ b/views/about.html
@@ -38,8 +38,9 @@
         </ul>
         </nav>
           <hr class="-mt-8">
-          <h1 class="text-4xl text-left tracking-wider p-4 mt-40 ml-48">ABOUT</h1>
-          <div class="tracking-widest text-left p-4 ml-48">
+          <h1 class="text-4xl text-center tracking-wider p-4 mt-40">ABOUT</h1>
+          <hr class="coverHr w-1/3 center mx-auto">
+          <div class="tracking-widest text-center p-4">
             <p>Learn more about VINCI's</p>
             <p>mission, origin and teams</p>
           </div>
@@ -89,11 +90,12 @@
           <h2 class="text-left font-semibold text-3xl tracking-wider">Team</h2>
           <hr class="w-1/2">
 
+<!--EAGLE'S PAGE -->
           <div class="p-4 mb-6">
             <div class="flex mx-24">
               <div class="w-1/3 px-4">
                 <div class="bg-gray-400 w-40 h-40">
-                    <img id="employeeImg" class="object-cover h-full w-full" src="../public/img/eagle.jpg" alt="">
+                    <img alt="" id="employeeImg" class="object-cover h-full w-full" src="../public/img/eagle.jpg">
                     <div id="myModal" class="modal">
                       <span class="close">&times;</span>
                       <img class="modal-content" id="img01">
@@ -105,14 +107,35 @@
                 <hr class="ml-2 w-1/2">
                 <span class="flex ml-8 p-1">Business Dev</span>
               </div>
+
+
+<!--TIMS PAGE -->
               <div class="w-1/3 px-4">
-                <div class="bg-gray-500 w-40 h-40"></div>
+                <div class="bg-gray-400 w-40 h-40">
+                    <img id="employeeImg" class="object-cover h-full w-full" src="../public/img/tim.jpeg">
+                    <div id="myModal" class="modal">
+                      <span class="close">&times;</span>
+                      <img class="modal-content" id="img01">
+                      <div id="caption">
+                      </div>
+                    </div>
+                </div>
                 <span class="flex ml-10 p-1 font-semibold">Tim Clancy</span>
                 <hr class="w-1/2 ml-2">
                 <span class="flex ml-12 p-1 ">Engineer</span>
               </div>
+
+          <!--Liam's PAGE -->
               <div class="w-1/3 px-4 mr-4">
-                <div class="bg-gray-400 w-40 h-40"></div>
+                <div class="bg-gray-400 w-40 h-40">
+                    <img alt="" id="employeeImg" class="object-cover h-full w-full" src="../public/img/liam.jpg">
+                    <div id="myModal" class="modal">
+                      <span class="close">&times;</span>
+                      <img class="modal-content" id="img01">
+                      <div id="caption">
+                      </div>
+                    </div>
+                </div>
                 <span class=" flex ml-10 p-1 font-semibold">blank</span>
                 <hr class="w-1/2 ml-2">
                 <span class="flex ml-10 p-1">Business Dev</span>
@@ -120,22 +143,49 @@
             </div>
           </div>
 
+          <!--Matt's Page -->
           <div class="p-4">
             <div class="flex mx-24">
               <div class="w-1/3 px-4 -mt-4">
-                <div class="bg-gray-400 w-40 h-40"></div>
+                <div class="bg-gray-400 w-40 h-40">
+                    <img alt="" id="employeeImg" class="object-cover h-full w-full" src="../public/img/matt.jpg">
+                    <div id="myModal" class="modal">
+                      <span class="close">&times;</span>
+                      <img class="modal-content" id="img01">
+                      <div id="caption">
+                      </div>
+                    </div>
+                </div>
                 <span class="flex ml-10 p-1 font-semibold">blank</span>
                 <hr class="w-1/2 ml-2">
                 <span class="flex ml-10 p-1">Business Dev</span>
               </div>
+
+
               <div class="w-1/3 px-4 -mt-4">
-                <div class="bg-gray-500 w-40 h-40"></div>
+                <div class="bg-gray-400 w-40 h-40">
+                    <img alt="" id="employeeImg" class="object-cover h-full w-full" src="../public/img/img1.jpg">
+                    <div id="myModal" class="modal">
+                      <span class="close">&times;</span>
+                      <img class="modal-content" id="img01">
+                      <div id="caption">
+                      </div>
+                    </div>
+                </div>
                 <span class="flex ml-10 p-1 font-semibold">blank</span>
                 <hr class="w-1/2 ml-2">
                 <span class="flex ml-10 p-1">Business Dev</span>
               </div>
               <div class="w-1/3 px-4 mr-4 -mt-4">
-                <div class="bg-gray-400 w-40 h-40"></div>
+                <div class="bg-gray-400 w-40 h-40">
+                    <img alt="" id="employeeImg" class="object-cover h-full w-full" src="../public/img/img1.jpg">
+                    <div id="myModal" class="modal">
+                      <span class="close">&times;</span>
+                      <img class="modal-content" id="img01">
+                      <div id="caption">
+                      </div>
+                    </div>
+                </div>
                 <span class="flex ml-10 p-1 font-semibold">blank</span>
                 <hr class="w-1/2 ml-2">
                 <span class="flex ml-10 p-1">Business Dev</span>
@@ -144,6 +194,74 @@
           </div>
         </div>
       </section>
+
+
+      <section class=" mb-4 text-primary panel background">
+        <section class="text-gray-700 body-font">
+              <div class="container px-5 py-24 mx-auto">
+                <div class="flex flex-col text-center w-full mb-20">
+                  <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-primary">Our Team</h1>
+                  <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Whatever cardigan tote bag tumblr hexagon brooklyn asymmetrical gentrify, subway tile poke farm-to-table. Franzen you probably haven't heard of them.</p>
+                </div>
+                <div class="flex flex-wrap -m-2">
+                  <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
+                    <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
+                      <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/eagle.jpg">
+                      <div class="flex-grow">
+                        <h2 class="text-primary title-font font-medium">Eagle Wu</h2>
+                        <p class="text-third">Business Dev</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
+                    <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
+                      <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/tim.jpeg">
+                      <div class="flex-grow">
+                        <h2 class="text-primary title-font font-medium">Tim Clancy</h2>
+                        <p class="text-third">Engineer</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
+                    <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
+                      <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/liam.jpg">
+                      <div class="flex-grow">
+                        <h2 class="text-primary title-font font-medium">john doe</h2>
+                        <p class="text-third">blank</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
+                    <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
+                      <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/matt.jpg">
+                      <div class="flex-grow">
+                        <h2 class="text-primary title-font font-medium">John Doe</h2>
+                        <p class="text-third">blank</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
+                    <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
+                      <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/img1.jpg">
+                      <div class="flex-grow">
+                        <h2 class="text-primary title-font font-medium">john doe</h2>
+                        <p class="text-third">blank</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
+                    <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
+                      <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/tim.jpeg">
+                      <div class="flex-grow">
+                        <h2 class="text-primary title-font font-medium">john doe</h2>
+                        <p class="text-third">blank</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </section>
+        </section>
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/ScrollTrigger.min.js"></script>
