--- a/views/partners.html
+++ b/views/partners.html
@@ -39,7 +39,7 @@
         </nav>
           <hr class="-mt-8">
           <h1 class="text-4xl text-left tracking-wider p-4 mt-48  ml-24">PARTNERS</h1>
-          <div class="tracking-widest text-left p-4 ml-24 mt-2">
+          <div class="tracking-widest text-left p-4 ml-24">
             <p>See how VINCI is changing </p>
             <p>training today.</p>
           </div>
@@ -62,7 +62,7 @@
                      <br><br>
                     VINCI was awarded a contract by the Air Force to develop VR environments and modify CODEX for various USAF aircraft. </p>
                    <div class="flex justify-center">
-                     <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 text-lg">Case Study</button>
+                     <button class="inline-flex text-white border-solid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Case Study</button>
                      <button class="ml-4 inline-flex text-gray-700 bg-gray-200 border-0 py-2 px-6 focus:outline-none hover:bg-gray-300 text-lg">Learn More</button>
                    </div>
                  </div>
@@ -86,7 +86,7 @@
                    </h1>
                    <p class="mb-8 leading-relaxed">VINCI is working with Siemens Gamesa Renewable Energy to prototype training solutions for safety equipment in their offshore wind turbine division. Currently, training is focused on helping workers identify errors on safety/fall harnesses. SGRE is challenged with visually showing defects on harnesses to their workforce, but must juggle the costs of doing so as demonstrating defects could damage expensive harnesses. VR can simulate an endless combination of possible defects at no cost, providing an immense amount of training opportunities for their workforce.  </p>
                    <div class="flex justify-center">
-                     <button class="inline-flex text-white bg-indigo-500 border-0 py-2  px-6 focus:outline-none hover:bg-indigo-600 text-lg">Learn about SGRE</button>
+                     <button class="inline-flex text-white border-solid border-2 py-2  px-6 focus:outline-none hover:bg-red-600 text-lg">Learn about SGRE</button>
                    </div>
                  </div>
                </div>
@@ -111,7 +111,7 @@
                     <br><br>
                    Please contact us directly for more information.</p>
                    <div class="flex justify-center">
-                     <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Learn about Natick Solider Research</button>
+                     <button class="inline-flex text-white border-solid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Learn about Natick Solider Research</button>
                    </div>
                  </div>
                </div>
@@ -139,7 +139,7 @@
                      Working with Select Int., VINCI helped prototype a VR version of their SAFETYDNA workplace safety training; workers can now get the experience of being injured due to unsafe actions in VR without the actual physical consequences. By doing this, the principles of SafetyDNA can be deeply embedded into workers’ minds, making them remember safety traits better on real-world lines.
                     </p>
                    <div class="flex justify-center">
-                     <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Learn about SafetyDNA</button>
+                     <button class="inline-flex text-white border-solid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Learn about SafetyDNA</button>
                    </div>
                  </div>
                </div>
@@ -152,9 +152,9 @@
           <footer class="background bg-bottom bg-cover text-primary body-font mt-24 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
             <h1 class ="text-primary text-center sm:text-4xl text-3xl">Want to Learn More About VR Training?</h1>
             <div class="flex flex-col justify-center mt-24">
-            <button class="w-1/5 mx-auto text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 text-lg">Check Out Our Blogs</button>
+            <button class="w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Check Out Our Blogs</button>
             <p class="mx-auto text-Center text-2xl text-primary text-semibold">-or-</p>
-            <button class=" w-1/5 mx-auto text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 text-lg">Reach Out To Us</button>
+            <button class=" w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Reach Out To Us</button>
             </div>
             <div class=" container px-5 py-32 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-no-wrap flex-wrap flex-col">
               <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left md:mt-0 mt-10">
