--- a/views/contact.html
+++ b/views/contact.html
@@ -39,13 +39,13 @@
         </nav>
           <hr class="-mt-8">
           <h1 class="text-4xl text-left tracking-wider p-4 mt-48 ml-24">CONTACT</h1>
-          <div class="tracking-widest text-left p-4 ml-24 mt-2">
+          <div class="tracking-widest text-left p-4 ml-24">
             <p>Have any questions?</p>
             <p>Drop us a message.</p>
             <p>Book a demo.</p>
           </div>
        </section>
-       <section class="mb-4 panel background first">
+       <section class=" bg-center bg-covermb-4 panel background first" style="background-image: url('../public/img/contactbckgrnd.png'">
           <section class="text-gray-700 body-font relative">
             <div class="container px-5 py-24 mx-auto flex sm:flex-no-wrap flex-wrap">
               <div class="bg-opacity-75 lg:w-2/3 md:w-1/2 flex flex-col md:ml-auto w-full md:py-8 mt-8 md:mt-0">
@@ -56,12 +56,13 @@
 
                 <textarea class="border focus:outline-none h-32 focus:border-indigo-500 text-base px-8 py-2 mb-4 mt-2 resize-none" placeholder="Message"></textarea>
                 <button class=" mt-2 w-1/3 text-white border-solid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">send</button>
-                <p class="text-xs text-gray-500 mt-3">Chicharrones blog helvetica normcore iceland tousled brook viral artisan.</p>
+                <p class="text-xs text-gray-500 mt-3">////////////////////////////////////////////////////////////////////</p>
               </div>
 
-              <div class="lg:w-1/3 md:w-1/2 rounded-lg border-solid border-2 overflow-hidden sm:mr-10 p-10 flex items-end justify-end ml-10 relative bg-content h-56 mt-32" style="background-image: url('../public/img/contactstock.png')">
+              <div class="lg:w-1/3 md:w-1/2 rounded-lg overflow-hidden sm:mr-10 p-10 flex items-end justify-end ml-10 relative bg-content h-56 mt-32 object-cover"
                 <h2></h2>
-                <img src="" alt="">
+                <img  class="" src="../public/img/placeholder.png" alt="">
+                <img  class="mt-20" src="../public/img/placeholder.png" alt="">
               </div>
             </div>
           </section>
