--- a/views/careers.html
+++ b/views/careers.html
@@ -45,7 +45,7 @@
             </a>
           </ul>
         </nav>
-        
+
         <!-- <nav class="w-screen flex justify-between relative z-10 border-b sm:p-4 lg:p-4">
           <a href="./index.html">
             <img class="max-w-xs h-16 sm:w-40 sm:h-auto sm:my-3" src="../public/assets/figma-imgs/vinci-logo.png" alt="vinci logo">
@@ -149,7 +149,7 @@
         ==================-->
 
         <section class="panel footer-text h-screen w-full">
-          <section class="contents contact mt-20 p-8">
+          <section class="contents contact mt-20 p-8 pb-64">
             <h1 class="text-4xl font-black mb-20">Want to Learn More About VR Training?</h1>
             <a href=./blogs.html"">
               <span class=" border p-2 bg-secondary text-primary text-2xl hover:bg-gray-100 hover:opacity-3 hover:text-gray-600 sm:text-l lg:text-xl">Head over to Our Blogs to Learn more ></span>
@@ -182,7 +182,7 @@
                   </a>
                 </ul>
                 </footer>
-                <section class="footer-logos w-1/3 mx-32 absolute bottom-0 right-0">
+                <section class="footer-logos w-1/3 mx-32 absolute bottom-0 mb-20 right-0">
                   <div class="small-logos flex justify-end">
                     <img class="mx-12" src="../public/assets/figma-imgs/twitter.png" alt="">
                     <img src="../public/assets/figma-imgs/linkedin.png" alt="">
