--- a/views/index.html
+++ b/views/index.html
@@ -298,8 +298,8 @@
          FOOTER/CONTACT SECTION
         ==================-->
 
-        <section class="panel footer-text h-screen w-full">
-          <section class="contents contact mt-64 p-8">
+        <section class="panel footer-text h-screen w-full pb-64">
+          <section class="contents contact mt-48 p-8">
             <h1 class="text-4xl font-black mb-20">Want to Learn More About VR Training?</h1>
             <a href=./blogs.html"">
               <span class="my-64 border p-2 bg-secondary text-primary text-2xl hover:bg-gray-100 hover:opacity-3 hover:text-gray-600 sm:text-l lg:text-xl">Head over to Our Blogs to Learn more ></span>
@@ -347,27 +347,39 @@
 
     <!-- SCRIPTS -->
 
-    <!-- <script type="text/javascript">
-      let card = document.querySelectorAll("card");
+    <script type="text/javascript">
+      let card = document.querySelector("#card");
 
-      console.log(card);
+      // console.log(card);
+      //
+      // for(let i=0; i<card.length; i++) {
+      //   if(card[i].active = true) {
+      //     alert("yes");
+      //   }else{
+      //     alert("no bueno");
+      //   }
+      // }
 
-      for(let i=0; i<card.length; i++) {
-        if(card[i].active = true) {
-          alert("yes");
-        }else{
-          alert("no bueno");
+      card.addEventListener("click", countCheck);
+
+      function countCheck() {
+        alert("dog");
+        let count = 0;
+
+        for(let i=0; i<card.length; i++) {
+          count++
+          console.log(count);
+
+          if(count % 2 != 0) {
+            card.style.backgroundColor = "#6C6C6C";
+            card.style.filter = "drop-shadow(0 0 0.75rem #827D7D)";
+          }else if(count % 2 == 0) {
+            card.style.backgroundColor = "#6C6C6C";
+            card.style.filter = "none";
+          }
         }
       }
-
-      // card.addEventListener("click", () => {
-      //   alert("dog");
-      //   card.style.transform = "scale(1.3)";
-      //   card.style.zIndex = 10;
-      //   card.style.backgroundColor = "#6C6C6C";
-      //   card.style.filter = "drop-shadow(0 0 0.75rem #827D7D)";
-      // })
-    </script> -->
+    </script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/ScrollTrigger.min.js"></script>
